# multicurrency-bill-splitter

./: .gitignore  Bill.h  CMakeLists.txt  Currency.cpp  Currency.h  README.md  User.h  main.cpp
dependancies/: Bill.h  CMakeLists.txt  Currency.h
dependencies/: Bill.cpp  Bill.h  CMakeLists.txt  Currency.cpp  Currency.h  User.h
include/: CMakeLists.txt
src/: main.cpp
tests/: CMakeLists.txt  test.cpp  testCurrency  testCurrency.cpp
